--- a/clientes.html
+++ b/clientes.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="col-md-10 text-menu d-flex justify-content-end">
                     <ul class="nav nav-pills">
-                        <li class="nav-item"><a href="/" class="nav-link" aria-current="page">HOME</a></li>
+                        <li class="nav-item"><a href="index.html" class="nav-link">HOME</a></li>
                         <li class="nav-item"><a href="clientes.html" class="nav-link active">CADASTRO DE CLIENTES</a>
                         </li>
                         <li class="nav-item"><a href="pets.html" class="nav-link">CADASTRO DE PETS</a></li>
