--- a/contato.html
+++ b/contato.html
@@ -20,8 +20,8 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-2">
-                    <a href="/" class="d-flex mb-3 mb-md-0 me-md-auto">
-                        <img src="img/logo_site_pet.png" width="150" alt="Logo do site">
+                    <a href="index.html" class="d-flex mb-3 mb-md-0 me-md-auto">
+                            <img src="img/logo_site_pet.png" width="150" alt="Logo do rodapé">
                     </a>
                 </div>
                 <div class="col-md-10 text-menu d-flex justify-content-end">
@@ -80,8 +80,8 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="col-md-2">
-                        <a href="/" class="d-flex mb-3 mb-md-0 me-md-auto">
-                            <img src="img/logo_site_pet.png" width="200" alt="Logo do rodapé">
+                        <a href="index.html" class="d-flex mb-3 mb-md-0 me-md-auto">
+                            <img src="img/logo_site_pet.png" width="150" alt="Logo do rodapé">
                         </a>
                     </div>
                 </div>
