--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-2">
-                    <a href="/" class="d-flex mb-3 mb-md-0 me-md-auto">
+                    <a href="index.html" class="d-flex mb-3 mb-md-0 me-md-auto">
                         <img src="img/logo_site_pet.png" width="150" alt="Logo do site">
                     </a>
                 </div>
@@ -147,8 +147,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="col-md-2">
-                        <a href="/" class="d-flex mb-3 mb-md-0 me-md-auto">
-                            <img src="img/logo_site_pet.png" width="200" alt="Logo do rodapé">
+                        <img src="img/logo_site_pet.png" width="150" alt="Logo do site">
                         </a>
                     </div>
                 </div>
