--- a/produtos.html
+++ b/produtos.html
@@ -20,8 +20,8 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-2">
-                    <a href="/" class="d-flex mb-3 mb-md-0 me-md-auto">
-                        <img src="img/logo_site_pet.png" width="150" alt="Logo do site">
+                    <a href="index.html" class="d-flex mb-3 mb-md-0 me-md-auto">
+                        <img src="img/logo_site_pet.png" width="150" alt="Logo do rodapé">
                     </a>
                 </div>
                 <div class="col-md-10 text-menu d-flex justify-content-end">
@@ -60,7 +60,8 @@
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                 <a href="produto02.html">
                     <div class="card rounded shadow-sm">
-                        <img class="card-img-top rounded" src="img/produto02.jpg" alt="Ração Golden Raças Pequenas 3 kg">
+                        <img class="card-img-top rounded" src="img/produto02.jpg"
+                            alt="Ração Golden Raças Pequenas 3 kg">
                     </div>
                     <h5 class="texto-destaques">Ração Golden Raças Pequenas 3 kg</h5>
                 </a>
@@ -68,7 +69,8 @@
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                 <a href="produto03.html">
                     <div class="card rounded shadow-sm">
-                        <img class="card-img-top rounded" src="img/produto03.jpg" alt="Ração Foster Original Premium 15kg">
+                        <img class="card-img-top rounded" src="img/produto03.jpg"
+                            alt="Ração Foster Original Premium 15kg">
                     </div>
                     <h5 class="texto-destaques">Ração Foster Original Premium 15kg</h5>
                 </a>
@@ -89,8 +91,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="col-md-2">
-                        <a href="/" class="d-flex mb-3 mb-md-0 me-md-auto">
-                            <img src="img/logo_site_pet.png" width="200" alt="Logo do rodapé">
+                        <img src="img/logo_site_pet.png" width="200" alt="Logo do rodapé">
                         </a>
                     </div>
                 </div>
